--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
 <div class="slider">
-    <div class="slide active" style="background-image: url(img/Bishkek.jpg)">
-        <span>Чуйская область</span>
+    <div class="slide active" style="background-image: url(img/city.jpg)">
+        <span>city</span>
     </div>
-    <div class="slide" style="background-image: url(img/Osh.jpg)">
-        <span>Ошская область</span>
+    <div class="slide" style="background-image: url(img/forest.jpg)">
+        <span>forest</span>
     </div>
-    <div class="slide" style="background-image: url(img/Jalal-Abad.jpg)">
-        <span>Джалал-Абадская область</span>
+    <div class="slide" style="background-image: url(img/lake.jpg)">
+        <span>lake</span>
     </div>
-    <div class="slide" style="background-image: url(img/Naryn.jpg)">
-        <span>Нарынская область</span>
+    <div class="slide" style="background-image: url(img/mountains.jpg)">
+        <span>mountains</span>
     </div>
-    <div class="slide" style="background-image: url(img/Talas.jpg)">
-        <span>Таласская область</span>
+    <div class="slide" style="background-image: url(img/weald.jpg)">
+        <span>weald</span>
     </div>
 </div>
 <div class="indicators">
