--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DZ3</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -30,10 +30,7 @@
     <div class="nav-item"></div>
     <div class="nav-item"></div>
     <div class="nav-item"></div>
-    <div class="nav-item"></div>
-    <div class="nav-item"></div>
 </div>
-
 
 <script src="./main.js"></script>
 </body>
